Fix scrolling on mobile devices by enabling vertical touch-action

--- a/src/app/blocks/main/main.component.scss
+++ b/src/app/blocks/main/main.component.scss
@@ -9,6 +9,9 @@ section {
   background: #f1f1f1;
   -webkit-transition: all .3s ease-out;
   transition: all .3s ease-out;
+  // hammerjs uses x-axis scrolling for swiping left / right.
+  // It sets touch-action to none, thus also preventing vertical scrolling on mobile devices.
+  touch-action: pan-y !important;
 }
 
 @media(max-width:767px){
